--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
 </head>
 <body>
 	<div class="container-fluid">
-		<h1>Bobby's Pizza</h1>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand "href="#">Peter's Bakery</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="#">ABOUT US <span class="sr-only">(current)</span></a>
+					</li>
+				</ul>
+				<nav class="navbar navbar-light bg-light">
+					<form class="form-inline">
+						<button class="btn btn-outline-success" type="button">+254720800000</button>
+					</form>
+				</nav>
+			</div>
+		</nav>
 		
 	</div>
 
