Add size price object and the user-interface logic.

--- a/margharita.html
+++ b/margharita.html
@@ -111,6 +111,9 @@
 					<div>
 						<h4 id="toppings-price" class="p-2"></h4>
 					</div>
+					<div>
+						<h3 id="final-price" class="p-2"></h3>
+					</div>
 				</form>
 			</div>
 		</div>
