--- a/margharita.html
+++ b/margharita.html
@@ -69,7 +69,7 @@
 						<h4 id="size-price" class="p-2"></h4>
 					</div>
 					<!------------------------------------Crust selection------------------------------------------------>
-					<div id="crusts" class="form-group">
+					<div id="crusts" class="form-group p-3">
 						<h4>Choose your crust</h4>
 						<div class="custom-control custom-radio custom-control-inline">
 							<input type="radio" class="custom-control-input" id="crust1" name="crust" value="option1">
@@ -112,7 +112,8 @@
 						<h4 id="toppings-price" class="p-2"></h4>
 					</div>
 					<div>
-						<h3 id="final-price" class="p-2"></h3>
+						<h3 class="p-3" ">Final price</h3>
+						<h4 id="final-price" class="p-2"></h4>
 					</div>
 				</form>
 			</div>
