Add css size styling to individual pages.

--- a/margharita.html
+++ b/margharita.html
@@ -44,7 +44,7 @@
 				<h4 class="card-title"><h2>How would you like Margherita Pizza</h2></h4>
 				
 				<!--Form-->
-				<form>
+				<form id="viewArea">
 					<div>
 						<h4>Pick your Pizza size</h4>
 						<div id="sizes" class="btn-group btn-group-toggle" data-toggle="buttons">
