Make corrections to css h2 styling.

--- a/margharita.html
+++ b/margharita.html
@@ -41,7 +41,7 @@
 			<div class="card-body">
 				
 				<!--Title-->
-				<h4 class="card-title"><h2>How would you like Margherita Pizza</h2></h4>
+				<h2 class="card-title">How would you like your Margherita Pizza</h2>
 				
 				<!--Form-->
 				<form id="viewArea">
