--- a/pepperoni.html
+++ b/pepperoni.html
@@ -24,7 +24,7 @@
 		<div class="card-body">
 			
 			<!--Title-->
-			<h4 class="card-title"><h2>How would you like Pepperoni Pizza</h2></h4>
+			<h2 class="card-title">How would you like your Pepperoni Pizza</h2>
 			
 			<!--Form-->
 			<form>
