--- a/quattro.html
+++ b/quattro.html
@@ -24,7 +24,7 @@
 		<div class="card-body">
 			
 			<!--Title-->
-			<h4 class="card-title"><h2>How would you like Quattro Staggioni Pizza</h2></h4>
+			<h2 class="card-title">How would you like your Quattro Staggioni Pizza</h2>
 			
 			<!--Form-->
 			<form>
