--- a/tuscan.html
+++ b/tuscan.html
@@ -23,7 +23,7 @@
 		<div class="card-body">
 			
 			<!--Title-->
-			<h4 class="card-title"><h2>How would you like Tuscan Pizza</h2></h4>
+			<h2 class="card-title">How would you like your Tuscan Pizza</h2>
 			
 			<!--Form-->
 			<form>
